--- a/my_react_project/src/index.css
+++ b/my_react_project/src/index.css
@@ -1,3 +1,6 @@
+body {
+  background: #ececec;
+}
 .card {
   font-family: Arial, sans-serif;
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -9,6 +12,7 @@
   padding-top: 10px;
   margin: 10px;
 }
+
 .card .profilePic {
   width: 60%;
   border-radius: 50%;
