--- a/my_react_project/src/components/Students/styles.module.css
+++ b/my_react_project/src/components/Students/styles.module.css
@@ -1,5 +1,6 @@
 .students {
     border: 1px solid black;
+    border-radius: 5px;
     margin: 5px;
     padding: 5px;
     font-family: Arial, sans-serif;
