--- a/my_react_project/src/components/List/styles.module.css
+++ b/my_react_project/src/components/List/styles.module.css
@@ -13,5 +13,10 @@
     font-family: Arial, sans-serif;
     font-size: 1.5em;
     text-align: center;
-    color: #232323;
+    color: #171717;
+    cursor: pointer;
+    list-style: none;
+}
+.item li:hover {
+    color: #6c6c6c;
 }
